# epitk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/epitk/: __init__.py
tests/: test_epitk.py
